# highway-code-test

./: .gitignore  .pylintrc  Pipfile  makefile  pyproject.toml  readme.md  requirements.txt
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
data/: questions.json  stats.json
fixture/: fixture_manager.py  questions.json
fixture/en/: questions.json
fixture/fr/: questions.json
locales/: base.pot
locales/en/LC_MESSAGES/: main.mo  main.po  main.po~
locales/fr/LC_MESSAGES/: main.mo  main.po
src/: command.py  question.py  stats.py  translation.py
src/highway_code/: command.py  question.py  stats.py
src/highway_code/application/question/: handler.py
src/highway_code/application/statistic/: handler.py
src/highway_code/domain/model/: question.py  statistic.py
src/highway_code/domain/question/: exception.py  manager.py  render.py
src/highway_code/domain/render/: cli.py
src/highway_code/domain/statistic/: manager.py  render.py
src/highway_code/domain/translation/: translation.py
src/highway_code/infrastructure/: containers.py
src/highway_code/infrastructure/cli/: command.py
src/highway_code/infrastructure/persistence/: question.py  statistic.py
src/highway_code/infrastructure/render/: cli.py
src/highway_code/infrastructure/translation/: translation.py
test/: command.py  command_helper.py  test_question_command.py  test_stats_command.py
tests/: conftest.py  fixture.py
tests/functional/cli/: command_helper.py  test_question_command.py  test_stats_command.py
tests/unit/: factory.py
tests/unit/application/question/: test_handler.py
tests/unit/domain/question/: test_manager.py  test_render.py
