[tool.poetry]
name = "highway-code"
version = "0.2.0"
description = "cli for highway code"
authors = ["bersiroth <caronbernard1@gmail.com>"]
readme = "readme.md"
packages = [
    { include = "highway_code", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
python-gettext = "^4.1"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"
freezegun = "^1.2.2"
mypy = "^0.982"
pylint = "^2.15.5"
autoflake = "^1.7.6"
bandit = "^1.7.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
highway-code = "highway_code.command:cli"

